--- a/.github/m2_test_action.yml
+++ b/.github/m2_test_action.yml
@@ -6,4 +6,14 @@ on:
       - main
       
 jobs:
-  create-release:
+  build:
+    - name: create tag
+    uses: actions/github-script@v5
+    with:
+      script: |
+        github.rest.git.createRef({
+          owner: context.repo.owner,
+          repo: context.repo.repo,
+          ref: 'refs/tags/0.0.0',
+          sha: context.sha
+        })
