--- a/.github/workflows/m2_test_action.yml
+++ b/.github/workflows/m2_test_action.yml
@@ -6,10 +6,12 @@ jobs:
   build:
     name: create tag
     runs-on: ubuntu-latest
-    steps:
+    steps:     
+     - name: Checkout Code
+       uses: actions/checkout@v2
      - name: Set Tag Output
        id: set-tag
-       run: echo "::set-output name=tag_name::$(sh ./get-version.sh)"
+       run: echo "::set-output name=tag_name::$(sh get-version.sh)"
      - name: Create tag
        id: create-tag
        uses: actions/github-script@v6
