--- a/.github/workflows/m2_test_action.yml
+++ b/.github/workflows/m2_test_action.yml
@@ -9,6 +9,12 @@ jobs:
     steps:     
      - name: Checkout Code
        uses: actions/checkout@v2
+     - name: setup python
+       uses: actions/setup-python@v4
+       with:
+            pthon-version: '3.9'
+     - name: update version file
+       run: python minor_version_update.py
      - name: Set Tag Output
        id: set-tag
        run: echo "::set-output name=tag_name::$(sh get-version.sh)"
