--- a/.github/workflows/m2_test_action.yml
+++ b/.github/workflows/m2_test_action.yml
@@ -1,10 +1,12 @@
 name: M2 Test Action
 
-on: push
+on:
+      push:
+            branches:
+                  - main
       
 jobs:
-  build:
-    name: create tag
+  create-release:
     runs-on: ubuntu-latest
     steps:     
      - name: Checkout Code
@@ -13,8 +15,15 @@ jobs:
        uses: actions/setup-python@v4
        with:
             pthon-version: '3.9'
-     - name: update version file
-       run: python minor_version_update.py
+     - name: update major version file
+       if: contains( github.event.head_commit.message, 'major release')
+       run: python version_update.py 0
+     - name: update minor version file
+       if: contains( github.event.head_commit.message, 'minor release')
+       run: python version_update.py 0
+     - name: update patch version file
+       if: contains( github.event.head_commit.message, 'patch release')
+       run: python version_update.py 0
      - name: Set Tag Output
        id: set-tag
        run: echo "::set-output name=tag_name::$(sh get-version.sh)"
