--- a/.github/workflows/m2_test_action.yml
+++ b/.github/workflows/m2_test_action.yml
@@ -1,9 +1,6 @@
 name: M2 Test Action
 
-on:
-      push:
-            branches:
-                  - main
+on: push
       
 jobs:
   create-release:
