--- a/.github/workflows/m2_test_action.yml
+++ b/.github/workflows/m2_test_action.yml
@@ -35,6 +35,11 @@ jobs:
             ref: "refs/tags/${{ steps.set-tag.outputs.tag_name }}",
             sha: context.sha
           })
+     - name: Write release to file
+       id: write-release
+       run: |
+         touch version.txt
+         echo ${{ steps.set-tag.outputs.tag_name }} >> version.txt
      - name: Create release
        id: set-release
        uses: ncipollo/release-action@v1
