--- a/.github/workflows/m2_test_action.yml
+++ b/.github/workflows/m2_test_action.yml
@@ -40,6 +40,8 @@ jobs:
        run: |
          touch version.txt
          echo ${{ steps.set-tag.outputs.tag_name }} >> version.txt
+         echo "cat version.txt"
+         cat version.txt
      - name: Create release
        id: set-release
        uses: ncipollo/release-action@v1
