--- a/.github/workflows/m2_test_action.yml
+++ b/.github/workflows/m2_test_action.yml
@@ -14,13 +14,13 @@ jobs:
             pthon-version: '3.9'
      - name: update major version file
        if: contains( github.event.head_commit.message, 'major release')
-       run: python version_update.py 0
+       run: python version_update.py 0 "${{github.event.head_commit.message}}"
      - name: update minor version file
        if: contains( github.event.head_commit.message, 'minor release')
-       run: python version_update.py 1
+       run: python version_update.py 1 "${{github.event.head_commit.message}}"
      - name: update patch version file
        if: contains( github.event.head_commit.message, 'patch release')
-       run: python version_update.py 2
+       run: python version_update.py 2 "${{github.event.head_commit.message}}"
      - name: Set Tag Output
        id: set-tag
        run: echo "::set-output name=tag_name::$(sh get-version.sh)"
@@ -40,7 +40,7 @@ jobs:
        run: |
           git config --global user.name "test deployer"
           git config --global user.email "martin.liriano@extend.com"
-          git add version.txt
+          git add version.txt changelog.md
           git commit -m "version update deployment ${{ steps.set-tag.outputs.tag_name }}"
           git push
      - name: Create release
