--- a/.github/workflows/m2_test_action.yml
+++ b/.github/workflows/m2_test_action.yml
@@ -4,9 +4,22 @@ on:
    push:
       branches:
             - master
+            
+env:
+   USERNAME: 'extend-deployer'
+   USEREMAIL: "martin.liriano@extend.com"
+   MAJOR_RELEASE: 'major release'
+   MINOR_RELEASE: 'minor release'
+   PATCH_RELEASE: 'patch release'
+   if: |
+      contains( github.event.head_commit.message, $MAJOR_RELEASE) || contains( github.event.head_commit.message, $MINOR_RELEASE) 
+      || contains( github.event.head_commit.message, $PATCH_RELEASE)
+      
+      RUN_UPDATE: 'true'
       
 jobs:
   create-release:
+    if: $RUN_UPDATE == 'true'
     runs-on: ubuntu-latest
     steps:     
      - name: Checkout Code
@@ -16,13 +29,13 @@ jobs:
        with:
             pthon-version: '3.9'
      - name: update major version file
-       if: contains( github.event.head_commit.message, 'major release')
+       if: contains( github.event.head_commit.message, $MAJOR_RELEASE)
        run: python version_update.py 0 "${{github.event.head_commit.message}}"
      - name: update minor version file
-       if: contains( github.event.head_commit.message, 'minor release')
+       if: contains( github.event.head_commit.message, $MINOR_RELEASE)
        run: python version_update.py 1 "${{github.event.head_commit.message}}"
      - name: update patch version file
-       if: contains( github.event.head_commit.message, 'patch release')
+       if: contains( github.event.head_commit.message, $PATCH_RELEASE)
        run: python version_update.py 2 "${{github.event.head_commit.message}}"
      - name: Set Tag Output
        id: set-tag
@@ -41,8 +54,8 @@ jobs:
      - name: Push release files
        id: push-release-file
        run: |
-          git config --global user.name "test deployer"
-          git config --global user.email "martin.liriano@extend.com"
+          git config --global user.name $USERNAME
+          git config --global user.email $USEREMAIL
           git add version.txt changelog.md
           git commit -m "version update deployment ${{ steps.set-tag.outputs.tag_name }}"
           git push
