--- a/.github/workflows/m2_test_action.yml
+++ b/.github/workflows/m2_test_action.yml
@@ -11,11 +11,8 @@ env:
    MAJOR_RELEASE: 'major release'
    MINOR_RELEASE: 'minor release'
    PATCH_RELEASE: 'patch release'
-   if: |
-      contains( github.event.head_commit.message, $MAJOR_RELEASE) || contains( github.event.head_commit.message, $MINOR_RELEASE) 
-      || contains( github.event.head_commit.message, $PATCH_RELEASE)
-      
-      RUN_UPDATE: 'true'
+   if: contains( github.event.head_commit.message, $MAJOR_RELEASE) || contains( github.event.head_commit.message, $MINOR_RELEASE) || contains( github.event.head_commit.message, $PATCH_RELEASE)
+   RUN_UPDATE: 'true'
       
 jobs:
   create-release:
