--- a/.github/workflows/m2_test_action.yml
+++ b/.github/workflows/m2_test_action.yml
@@ -15,7 +15,7 @@ env:
       
 jobs:
   create-release:
-    if: contains( github.event.head_commit.message, $MAJOR_RELEASE) || contains( github.event.head_commit.message, $MINOR_RELEASE) || contains( github.event.head_commit.message, $PATCH_RELEASE)
+    if: contains( github.event.head_commit.message, {{ env.MAJOR_RELEASE }}) || contains( github.event.head_commit.message, $MINOR_RELEASE) || contains( github.event.head_commit.message, $PATCH_RELEASE)
     runs-on: ubuntu-latest
     steps:     
      - name: Checkout Code
