--- a/.github/workflows/m2_test_action.yml
+++ b/.github/workflows/m2_test_action.yml
@@ -15,7 +15,7 @@ env:
       
 jobs:
   create-release:
-    if: contains( github.event.head_commit.message, MAJOR_RELEASE) || contains( github.event.head_commit.message, MINOR_RELEASE) || contains( github.event.head_commit.message, PATCH_RELEASE)
+    if: contains( github.event.head_commit.message, 'major release') || contains( github.event.head_commit.message,'minor release') || contains( github.event.head_commit.message, 'patch release')
     runs-on: ubuntu-latest
     steps:     
      - name: Checkout Code
