--- a/.github/workflows/m2_test_action.yml
+++ b/.github/workflows/m2_test_action.yml
@@ -7,7 +7,7 @@ on:
       
 jobs:
   create-release:
-    if: (contains( github.event.head_commit.message, 'major release') || contains( github.event.head_commit.message,'minor release') || contains( github.event.head_commit.message, 'patch release')) 
+    if: (contains( github.event.head_commit.message, 'major release') || contains( github.event.head_commit.message,'minor release') || contains( github.event.head_commit.message, 'patch release')) && (github.event_name == 'pull_request') 
     runs-on: ubuntu-latest
     steps:     
      - name: Checkout Code
