--- a/.github/workflows/changelog_update.yml
+++ b/.github/workflows/changelog_update.yml
@@ -1,1 +1,28 @@
 
+name: M2 Test Action
+
+on:  
+  push:
+    branches:
+      - '!master'
+      
+jobs:
+  create-release:
+    runs-on: ubuntu-latest
+    steps:     
+     - name: Checkout Code
+       uses: actions/checkout@v2
+     - name: setup python
+       uses: actions/setup-python@v4
+       with:
+            pthon-version: '3.9'
+     - name: update changelog file
+       run: python version_update.py 'branch' "${{github.event.head_commit.message}}"
+     - name: Push changelog file
+       id: push-changelog-file
+       run: |
+          git config --global user.name 'extend-deployer'
+          git config --global user.email "martin.liriano@extend.com"
+          git add branch_changelog.md
+          git commit -m "version update deployment ${{ steps.set-tag.outputs.tag_name }}"
+          git push
