--- a/.github/workflows/changelog_update.yml
+++ b/.github/workflows/changelog_update.yml
@@ -7,7 +7,7 @@ on:
       - 'master'
       
 jobs:
-  create-release:
+  update-branch-changelog:
     runs-on: ubuntu-latest
     steps:     
      - name: Checkout Code
