--- a/.github/workflows/changelog_update.yml
+++ b/.github/workflows/changelog_update.yml
@@ -23,6 +23,6 @@ jobs:
        run: |
           git config --global user.name 'extend-deployer'
           git config --global user.email "martin.liriano@extend.com"
-          git add branch_changelog.md
+          git add ./.github/branch_changelog.md
           git commit -m "version update deployment ${{ steps.set-tag.outputs.tag_name }}"
           git push
