--- a/.github/workflows/m2_test_action.yml
+++ b/.github/workflows/m2_test_action.yml
@@ -45,7 +45,7 @@ jobs:
        run: |
           git config --global user.name 'extend-deployer'
           git config --global user.email "martin.liriano@extend.com"
-          git add version.txt changelog.md branch_changelog.md
+          git add version.txt changelog.md ./.github/branch_changelog.md
           git commit -m "version update deployment ${{ steps.set-tag.outputs.tag_name }}"
           git push
      - name: Create release
