--- a/.github/workflows/changelog_update.yml
+++ b/.github/workflows/changelog_update.yml
@@ -1,5 +1,5 @@
 
-name: M2 Test Action
+name: m2-branch-changelog-manager
 
 on:
   push:
@@ -17,7 +17,7 @@ jobs:
        with:
             pthon-version: '3.9'
      - name: update changelog file
-       run: python version_update.py 'branch' "${{github.event.head_commit.message}}"
+       run: python ./.github/version_update.py 'branch' "${{github.event.head_commit.message}}"
      - name: Push changelog file
        id: push-changelog-file
        run: |
