--- a/.github/workflows/changelog_update.yml
+++ b/.github/workflows/changelog_update.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   update-branch-changelog:
     runs-on: ubuntu-latest
-    if: github.event_name != 'create' && github.event.pull_request.merged == false
+    if: github.event_name != 'create'
     steps:     
      - name: Checkout Code
        uses: actions/checkout@v2
