--- a/.github/workflows/changelog_update.yml
+++ b/.github/workflows/changelog_update.yml
@@ -8,7 +8,7 @@ on:
       
 jobs:
   update-branch-changelog:
-    if: github.event_name != 'create' 
+    if: ${{ github.event.head_commit.id != github.event.before && github.event.created != true }} 
     runs-on: ubuntu-latest
     steps:     
      - name: Checkout Code
@@ -18,7 +18,7 @@ jobs:
        with:
             pthon-version: '3.9'
      - name: update changelog file
-       run: python ./.github/version_update.py 'branch' "${{github.event_name}}"
+       run: python ./.github/version_update.py 'branch' "${{github.event.head_commit.message}}"
      - name: Push changelog file
        id: push-changelog-file
        run: |
