--- a/.github/workflows/master-changelog_manager.yml
+++ b/.github/workflows/master-changelog_manager.yml
@@ -26,32 +26,40 @@ jobs:
      - name: update patch version file
        if: contains( github.event.head_commit.message, 'Patch Release')
        run: python ./.github/version_update.py 2 "${{github.event.head_commit.message}}"
-     - name: Set Tag Output
-       id: set-tag
-       run: echo "::set-output name=tag_name::$(sh ./.github/get-version.sh)"
-     - name: Create tag
-       id: create-tag
-       uses: actions/github-script@v6
-       with: 
-        script: |
-          github.rest.git.createRef({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            ref: "refs/tags/${{ steps.set-tag.outputs.tag_name }}",
-            sha: context.sha
-          })
      - name: Push release files
        id: push-release-file
        run: |
-          git config --global user.name 'extend-deployer'
+          git config --global user.name 'martin-liriano'
           git config --global user.email "martin.liriano@extend.com"
           git add ./.github/version.txt ./etc/config.xml changelog.md ./.github/branch_changelog.md
           git commit -m "version update deployment ${{ steps.set-tag.outputs.tag_name }}"
           git push
-     - name: Create release
-       id: set-release
-       uses: ncipollo/release-action@v1
-       with:  
-        tag: ${{ steps.set-tag.outputs.tag_name }}
+      - name: Set Tag Output
+       id: set-tag
+       run: echo "::set-output name=tag_name::$(sh ./.github/get-version.sh)"
+      - name: Create tag
+      #  id: create-tag
+      #  uses: actions/github-script@v6
+      #  with: 
+      #   script: |
+      #     github.rest.git.createRef({
+      #       owner: context.repo.owner,
+      #       repo: context.repo.repo,
+      #       ref: "refs/tags/${{ steps.set-tag.outputs.tag_name }}",
+      #       sha: context.sha
+      #     })
+      # - name: Create release
+      #  id: set-release
+      #  uses: ncipollo/release-action@v1
+      #  with:  
+      #   tag: ${{ steps.set-tag.outputs.tag_name }}
 
-        
+      - name: create-release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.set-tag.outputs.tag_name }}
+          release_name: ${{ steps.set-tag.outputs.tag_name }}
+          draft: false
+          prerelease: false
